--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         tools:targetApi="31">
         <activity
             android:name=".view.activities.SendActivity"
+            android:label="@string/label_sending"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
